# notes

./: .gitattributes  .gitignore  .nojekyll  README.md  Untitled.ipynb  Untitled1.ipynb  _quarto.yml  abstract.lua  acnc_registry_arrow.qmd  assign_magic.qmd  aus_ipos.html  aus_ipos.qmd  aussie_super.qmd  ballistics.qmd  bb68.ipynb  bb68.qmd  beaver68-duckdb.qmd  beaver68-pg.qmd  beaver68.qmd  bench.qmd  bhcf.qmd  biciclette.qmd  bikes.ipynb  bikes.qmd  bikes_again.qmd  bklyz.qmd  bos-seasons.qmd  cmsw.qmd  convert_to_pq.qmd  convivium.docx  cpi_groups.qmd  create_compustat_data.r  crsp-daily-py.qmd  crsp_daily_benchmark.qmd  crsp_daily_python.qmd  crsp_pq.py  ctes.qmd  curate_call_reports.html  curate_call_reports.qmd  data_mgt.qmd  (+103 more)
data/: .gitignore  sample_calls.csv
data-raw/: Bicicletta Globale Sales Data.xlsx  create_sample_calls.R
db2pq_test/: .gitignore  _quarto.yml  ibis_to_pq.html  ibis_to_pq.qmd  local_engine_benchmark.html  local_engine_benchmark.qmd  more_tests.html  more_tests.qmd  pyproject.toml  script_local_engine_benchmark.py
delisting_files/libs/bootstrap/: bootstrap-51d804da3ba2c5d557df5002a1cf1d84.min.css
ggsql_test/: .gitignore  _environment  _metadata.yml  pyproject.toml  retail_sales.html  retail_sales.parquet  retail_sales.qmd
images/: data-science-collect.graffle  data-science.graffle
plotnine_test/: .gitignore  _quarto.yml  beaver68.html  beaver68.qmd  book.bib  earn_annc_summ.parquet  index.html  index.qmd  make_earn_annc_summ.py  plotnine_testone.html  plotnine_testone.qmd  pyproject.toml
published/: acnc_registry_arrow.html  acnc_registry_arrow.qmd  aus_ipos.html  aus_ipos.qmd  bb68.html  bb68.qmd  bikes.html  bikes.qmd  bklyz.html  bklyz.qmd  bos-seasons.html  bos-seasons.qmd  convert_to_pq.html  convert_to_pq.qmd  cpi_groups.qmd  crsp-daily-py.html  crsp-daily-py.qmd  ctes.html  ctes.qmd  curate_call_reports.html  curate_call_reports.qmd  data_mgt.html  data_mgt.qmd  data_mgt_r.html  data_mgt_r.qmd  data_viz_problem.html  data_viz_problem.qmd  datetimes.html  datetimes.qmd  dbplyr-news.html  dbplyr-news.qmd  delisting.html  delisting.qmd  dera-polars.html  dera-polars.qmd  dsf_polars.html  dsf_polars.qmd  dsf_to_pd.sas  elephants.html  elephants.qmd  (+54 more)
published/bikes-partials/: page.typ
published/db2pq_test/: crsp_daily.qmd  pyproject.toml
published/images/: data-science-collect.graffle
rsconnect/documents/curate_call_reports.qmd/rpubs.com/rpubs/: Document.dcf  Publish Document.dcf
rsconnect/documents/data_mgt.qmd/rpubs.com/rpubs/: Document.dcf  Publish Document.dcf
rsconnect/documents/dbplyr-news.qmd/rpubs.com/rpubs/: Document.dcf  Publish Document.dcf
rsconnect/documents/dsf_polars.qmd/rpubs.com/rpubs/: Document.dcf  Publish Document.dcf
rsconnect/documents/g_secd.qmd/rpubs.com/rpubs/: Document.dcf  Publish Document.dcf
rsconnect/documents/insights_call_reports.qmd/rpubs.com/rpubs/: Document.dcf
rsconnect/documents/repro_data.qmd/rpubs.com/rpubs/: Document.dcf  Publish Document.dcf
rsconnect/documents/sas_to_pd.qmd/rpubs.com/rpubs/: Document.dcf  Publish Document.dcf
rsconnect/documents/shared_code.qmd/rpubs.com/rpubs/: Document.dcf  Publish Document.dcf
scripts/: render-db2pq-test.sh
site_libs/bootstrap/: bootstrap-52d3edc4879e86859cfab57e7fc9f8d6.min.css  bootstrap-7bfe934728b598ff50c0e2e8d6e038d5.min.css
unpublished/: assign_magic.qmd  ballistics.qmd  bb68.rmarkdown  beaver68-duckdb.qmd  beaver68-pg.qmd  biciclette.qmd  bikes_again.qmd  carmel.qmd  crsp-daily-py.qmd  crsp_daily_benchmark.qmd  elephants-response-2.qmd  elephants-response.qmd  fy_2001.qmd  insights_call_reports.qmd  on_genius.qmd  riv.qmd  trading_dates-alt.qmd
wip/: curate_hbcf.qmd  oop.qmd
