[project]
name = "notes"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # Data analysis
    "duckdb",
    "ibis-framework[duckdb]",
    "matplotlib",
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    # Jupyter
    "ipykernel",
    "ipywidgets",
    "jupyterlab",
    "notebook",
    # Utilities
    "beautifulsoup4",
    "db2pq",
    "httpx",
    "invoke",
    "paramiko",
    "pillow",
    "psycopg",
    "requests",
    "sqlglot",
]
