[project]
name = "notes"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # Data analysis
    "altair",
    "duckdb",
    "era_py",
    "ibis-framework[duckdb]",
    "ipython",
    "matplotlib",
    "numpy",
    "pandas",
    "plotnine",
    "polars",
    "pyarrow",
    "scipy",
    "seaborn",
    "sqlalchemy",
    "statsmodels",
    # Jupyter
    "ipykernel",
    "ipywidgets",
    "jupyterlab",
    "notebook",
    # Utilities
    "beautifulsoup4",
    "db2pq",
    "ffiec-data-collector",
    "httpx",
    "invoke",
    "openmeteo-requests>=1.7.5",
    "paramiko",
    "pillow",
    "psycopg",
    "requests",
    "requests-cache",
    "retry-requests",
    "sqlglot",
    "wrds2pg",
    "jupyter-cache>=1.0.1",
]

[tool.uv]
package = false

[tool.uv.sources]
era_py = { path = "../era_py", editable = true }
