[project]
name = "notes"
version = "0.1.0"
description = "Python environment for Quarto notes and notebooks"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Data analysis
    "altair==5.5.0",
    "duckdb==1.4.4",
    "era_py>=0.0.18",
    "ibis-framework[duckdb,postgres]==11.0.0",
    "ipython",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "pandas==2.3.3",
    "pandas-datareader",
    "plotnine",
    "polars>=1.38.1,<2",
    "pyarrow==23.0.0",
    "scipy",
    "seaborn",
    "sqlalchemy",
    "statsmodels",
    # Jupyter
    "ipykernel==7.1.0",
    "ipywidgets",
    "jupyter==1.1.1",
    "jupyter-cache>=1.0.1",
    "jupyterlab",
    "notebook",
    # Utilities
    "beautifulsoup4",
    "db2pq[ibis]>=0.2.10",
    "ffiec-data-collector",
    "httpx",
    "invoke",
    "openmeteo-requests>=1.7.5",
    "paramiko",
    "pillow",
    "psycopg>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pypdf",
    "requests==2.32.5",
    "requests-cache",
    "retry-requests",
    "sqlglot",
    "wrds2pg",
    "pip>=26.0.1",
]

[tool.uv]
package = false

[tool.uv.sources]
era_py = { path = "../era_py", editable = true }
