[project]
name = "db2pq-test"
version = "0.1.0"
description = "Repository for notes illustrating the `db2pq` package."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "db2pq[ibis]>=0.2.5",
    "jupyter-cache>=1.0.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "polars>=1.39.3",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.48",
]
