[project]
name = "plotnine-test"
version = "0.1.0"
description = "Minimal Quarto test project for plotnine branch work."
requires-python = ">=3.11"
dependencies = [
    "era-py[polars]>=0.0.25",
    "polars>=1.39.3",
    "plotnine @ git+https://github.com/iangow/plotnine.git@codex-fluent-api",
    "jupyter-cache>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
