[project]
name = "db2pq-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "db2pq[ibis]",
    "jupyterlab>=4.5.6",
    "polars>=1.39.3",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.48",
]

[tool.uv.sources]
db2pq = { path = "../../git/db2pq" }
